--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,13 @@
 *.dll
 *.dylib
 
+# CMake 
+CMakeCache.txt
+CMakeFiles
+Makefile
+cmake_install.cmake
+install_manifest.txt
+
 # Qt-es
 
 /.qmake.cache
@@ -22,11 +29,13 @@ qrc_*.cpp
 ui_*.h
 Makefile*
 *-build-*
+qt_generated_headers
+*.cxx_parameters
 
 # QtCreator
 
 *.autosave
 
-#QtCtreator Qml
+# QtCtreator Qml
 *.qmlproject.user
 *.qmlproject.user.*
